2005-02-22  Petr Ovtchenkov  <ptr@island...>

	* test/unit/limits_test.cpp: wchar_t is treated as signed, except when it
	equiv to unsigned short on Wins systems.

	* Repository: STLport 5.0 RC2

2005-02-20  Francois Dumont  <dums@stlport...>

	* Add many private definition of copy constructor and assignment operators
	to avoid very anoying warnings under some compilers (MSVC 7.0 7.1).

	* build/Makefiles/gmake/cygmin/sys.mak, test/unit/string_test.cpp:
	Mingw fixes thanks Shura Zam.

2005-02-19  Francois Dumont  <dums@stlport...>

	* stlport/stdexcept: Removal of a MSVC 7.0 and 7.1 workaround. Those compilers
	have a bug resulting in the generation of very long compiler message as
	soon as a simple compiler warning or error occur. Those messages are
	template instanciation context of previous disabled warning. Warning message
	are correctly disable but template instanciation context is kept until
	an enable warning or an error happen. There is nothing to do against that
	at STLport level except fixing or disabling warnings for unit tests build.
	
	* build/Makefiles/nmake/vc70.mak: Add missing file.
	
2005-02-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h, _unordered_set.h, _unordered_map.h: Code review
	based on the 12 April 2004 Technical Report document. Add missing hash policy
	and bucket_size methods. Fix of the rehash method behavior. erase method
	bug fix.

2005-02-14  Francois Dumont  <dums@stlport...>

	* stlport/string, /stl/_string.h: Modification of the include schema.
	_string_io.h no more included from _string.h to avoid circular headers
	dependencies as basic_string class is used in iostream implementation.
	This headers is now included from the Standard string header. Useless 
	cctype include removed from _string.h. _string_hash.h also moved from
	_string.h to string for consistency.

	* stlport/stl/_complex.c: Add of the _string_io.h header include that
	was missing after string include schema modification.
